--- a/index.html
+++ b/index.html
@@ -1409,7 +1409,7 @@
 </p>
 </div>
 <div style="text-align: center; margin-top: 50px;">
-  <a href="Art-Business/auctions.html" class="btn btn-gold" style="
+  <a href="Art-Bussiness/auctions.html" class="btn btn-gold" style="
     font-size: 1.2rem;
     padding: 16px 40px;
     border-radius: 50px;
