--- a/Art-Bussiness/auctions.html
+++ b/Art-Bussiness/auctions.html
@@ -1216,11 +1216,11 @@
         </a>
         
         <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="index.html#our-works">Our Works</a>
-            <a href="index.html#make-a-wish">Make a Wish</a>
+            <a href="/kivaro/index.html">Home</a>
+            <a href="/kivaro/index.html#our-works">Our Works</a>
+            <a href="/kivaro/index.html#make-a-wish">Make a Wish</a>
             <a href="auctions.html" class="active">Art Auctions</a>
-            <a href="index.html#about-us">About Us</a>
+            <a href="/kivaro/index.html#about-us">About Us</a>
         </div>
         
         <div class="nav-actions">
