--- a/Art-Bussiness/auctions.html
+++ b/Art-Bussiness/auctions.html
@@ -1216,11 +1216,11 @@
         </a>
         
         <div class="nav-links">
-<a href="/Kivaro/Art-Bussiness/index.html">Home</a>
-<a href="/Kivaro/Art-Bussiness/index.html#our-works">Our Works</a>
-<a href="/Kivaro/Art-Bussiness/index.html#make-a-wish">Make a Wish</a>
+<a href="Kivaro/index.html">Home</a>
+<a href="Kivaro/index.html#our-works">Our Works</a>
+<a href="Kivaro/index.html#make-a-wish">Make a Wish</a>
 <a href="auctions.html" class="active">Art Auctions</a>
-<a href="/Kivaro/Art-Bussiness/index.html#about-us">About Us</a>
+<a href="Kivaro/index.html#about-us">About Us</a>
         </div>
         
         <div class="nav-actions">
